tests/failing/set-global.lua
o = get("level2_muon_1")

